# cenmail

./: .env.op.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
src/: App.css  App.tsx  calendarPane.tsx  commandPalette.tsx  composeHelpers.ts  composeModal.tsx  constants.ts  contextMenu.tsx  htmlSanitize.test.ts  htmlSanitize.ts  keyboardHelpers.ts  messageList.tsx  messagePreview.tsx  modal.tsx  scheduledSendsModal.tsx  settings.ts  settingsModal.tsx  shortcutsHelp.tsx  sidebar.tsx  toast.tsx  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  constants.rs  db.rs  lib.rs  main.rs  oauth.rs  secret.rs
src-tauri/src/commands/: accounts.rs  auth.rs  calendar.rs  compose.rs  mod.rs  scheduled.rs  snooze.rs
src-tauri/src/gcal/: calendars.rs  events.rs  mod.rs
src-tauri/src/gmail/: auth.rs  compose.rs  messages.rs  mod.rs
src/calendar/: layout.test.ts  layout.ts
src/hooks/: useCommandPalette.ts  useContextMenu.ts  useDraftAutosave.ts  useSelection.ts  useSendUndo.ts  useShortcuts.ts  useTriage.test.ts  useTriage.ts
