[package]
name = "cenmail"
version = "0.1.0"
description = "Centralized mail — a Spark-inspired desktop mail client for Linux"
authors = ["Kyotaro Sakamoto <skmtkytr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cenmail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
url = "2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
dirs = "5"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
futures = "0.3"
urlencoding = "2.1.3"

